API送受信およびパスワードのハッシュ化完了

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "jquery": "^3.7.1",
     "next": "15.3.4",
     "react": "^19.0.0",
