--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "prisma": "^6.14.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
