DB接続の問題点修正済み

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
     "jquery": "^3.7.1",
     "next": "15.3.4",
