セッション管理を適用

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^6.0.0",
     "jquery": "^3.7.1",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
