--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
+    "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
+    "next-qrcode": "^2.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
